# LabProgrammazione_

./: .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  TodoList.cpp  TodoList.h  main.cpp
Tests/: TodoListTests.cpp
